--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<title>New film</title>
 	<link rel="stylesheet" href="styles/styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="shortcut icon" href="images/favicon.png">
+	<link rel="icon" href="images/favicon.png">
+	<link rel="manifest" href="manifest.json">
 </head>
 <body>
 	<div class="wrapper">
