fix multiple lines

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
 				<div id="actors" class="categories multiple-lines">
 					<div class="inputs-line inputs-line--static">
 						<div class="input-wrapper">
+							<input type="text" class="actor-photo" placeholder="Photo">
+						</div>
+						<div class="input-wrapper">
 							<input type="text" class="actor-name" placeholder="Actor">
 						</div>
 						<div class="input-wrapper">
@@ -169,7 +172,7 @@
 							<input type="text" class="award-nominations" placeholder="Nominations">
 						</div>
 					</div>
-					<button type="button" id="addAward" class="btn add-line-btn">Add</button>						
+					<button type="button" id="addAward" class="btn add-line-btn add-award-btn">Add</button>						
 				</div>
 			</div>
 			<section class="section hidden" data-type="series">
