change synopsis position in index.html

--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
 				</div>
 			</section>
 			<section class="section">
+				<h2 class="section-title">Synopsis</h2>
+				<div class="categories">
+					<textarea id="synopsis" class="synopsis"></textarea>
+				</div>
+			</section>
+			<section class="section">
 				<h2 class="section-title">Creators</h2>
 				<div class="categories">
 					<div class="input-wrapper">
@@ -152,14 +158,8 @@
 							<input type="text" class="actor-role" placeholder="Role">
 						</div>
 					</div>	
-					<button type="button" id="addActor" class="btn add-line-btn">Add</button>
 				</div>
-			</section>
-			<section class="section">
-				<h2 class="section-title">Synopsis</h2>
-				<div class="categories">
-					<textarea id="synopsis" class="synopsis"></textarea>
-				</div>
+				<button type="button" id="addActor" class="btn add-line-btn">Add actor</button>
 			</section>
 			<div class="section">
 				<h2 class="section-title">Awards</h2>
@@ -171,9 +171,9 @@
 						<div class="input-wrapper">
 							<input type="text" class="award-nominations" placeholder="Nominations">
 						</div>
-					</div>
-					<button type="button" id="addAward" class="btn add-line-btn add-award-btn">Add</button>						
+					</div>				
 				</div>
+				<button type="button" id="addAward" class="btn add-line-btn add-award-btn">Add award</button>
 			</div>
 			<section class="section hidden" data-type="series">
 				<h2 class="section-title">Seasons</h2>
